AUGREL/src/objects/Title__c.object
<CustomObject>
    <description>This object contains Title info. It will be related to the  FA.</description>
    <fields>
        <fullName>APO_Received__c</fullName>
        <description>Field to indicate if Authorization have been received.</description>
        <label>APO Received</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClosedCaseStatus__c</fullName>
        <description>Used for Case/Title updates to Title Status.</description>
        <label>ClosedCaseStatus</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Collateral that is related to the FA</description>
        <label>Collateral</label>
        <referenceTo>Collateral__c</referenceTo>
        <relationshipLabel>Titles</relationshipLabel>
        <relationshipName>Titles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Communications__c</fullName>
        <description>Communication sent to the customer regarding the Title</description>
        <label>Customer Communications</label>
        <picklist>
            <picklistValues>
                <fullName>Sent Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Bill of Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent CLAH Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent GAP Letter</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Mail_Date__c</fullName>
        <description>Date when Title is expected to be mailed to the customer</description>
        <label>Estimated Mail Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EvaluateFollowUp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for the purposes of create a Title Follow Up case.</description>
        <label>EvaluateFollowUp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FA_Number__c</fullName>
        <description>Financial Account Number the Title record belongs to</description>
        <formula>Financial_Account__r.Financial_Account_Number__c</formula>
        <label>FA Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FA Account that this Title record belongs to</description>
        <label>Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Titles</relationshipLabel>
        <relationshipName>Titles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hold_Reason__c</fullName>
        <description>Reason why the Title is being hold off</description>
        <label>Hold Reason</label>
        <picklist>
            <controllingField>Title_Status__c</controllingField>
            <picklistValues>
                <fullName>Band2 Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK No Closing Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSG Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat/Rebook/SCRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Overpayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misapplied Pmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Acct-Title Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Authorization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contract/DMS Folder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No ODO/Missing Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Within Maturity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Loss-Addr Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer in Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Modified_by_Lan_Id__c</fullName>
        <description>LAN ID of the user who last modified the Title</description>
        <label>Last Modified by Lan Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>ID from STARS/Siebel in which the Title was migrated from</description>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Acct_Num__c</fullName>
        <description>Mailing Account # used to send the Title out</description>
        <label>Mail Acct #</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overnight_Mail__c</fullName>
        <description>option to select how the Title should be shipped to the customer</description>
        <label>Overnight Mail</label>
        <picklist>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fed-Ex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payoff_Date__c</fullName>
        <description>last payoff date</description>
        <label>Payoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payoff__c</fullName>
        <description>Payoff Method </description>
        <label>Payoff Method</label>
        <picklist>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Portal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Perfected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Title is Perfected</description>
        <label>Perfected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Releasing_User_Name__c</fullName>
        <formula>Releasing_User__r.FirstName +&apos; &apos;+ Releasing_User__r.LastName</formula>
        <label>Releasing User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Releasing_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Releasing User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Titles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_To__c</fullName>
        <description>Option to whom the Title should be send to</description>
        <label>Send To</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-borrower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Originating Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_Notes__c</fullName>
        <description>Notes from Agents related to Title</description>
        <label>Title Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title_Send_To_Address__c</fullName>
        <description>Holds the  Address to where the Title shold be send to</description>
        <label>Title Send To Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title_State__c</fullName>
        <label>Title State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_Status__c</fullName>
        <description>Depicts the status of the Title.</description>
        <label>Title Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending-Not Yet Received</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Held</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_Type__c</fullName>
        <description>Indicates the type of Title</description>
        <label>Title Type</label>
        <picklist>
            <picklistValues>
                <fullName>Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lien Release</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <description>Holds the Tracking number of the shipped Title</description>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <description>This is the VIN number of related collateral. This needs to be send across to Tibco/STAR in outbound message</description>
        <formula>Collateral__r.Vehicle_Identification_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIN</label>
        <type>Text</type>
    </fields>
    <label>Title</label>
    <listViews>
        <fullName>PIF_Retail_Title</fullName>
        <filterScope>Queue</filterScope>
        <label>PIF - Retail</label>
        <queue>PIF_Retail</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>T-{0000000000}</displayFormat>
        <label>Title Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Titles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>